--- a/index.html
+++ b/index.html
@@ -75,15 +75,7 @@
     see more history
 </a>
 <footer>
-<<<<<<<<< Temporary merge branch 1
-   since 2024 copyright
-   안녕하세요
-   하이
-   추가입니다.
-   추가추가추가
-=========
-전부 지웠다!
->>>>>>>>> Temporary merge branch 2
+다 없앴습니다 15:54 
 </footer>
 </body>
 </html>
