마지막 베너 부분 수정
기존에 했던 작업이 있어서 그걸 그대로 써봤어요! css도 같이 추가했습니다!

--- a/index.html
+++ b/index.html
@@ -74,11 +74,48 @@
 <a href="#" class="btn unna">
     see more history
 </a>
-<footer>
-다 없앴습니다 15:54 
-리퀘스트 요청
-가나다라마바사 - 이하윤 
-</footer>
+
+<!-- container2 -->
+
+<section class="main2">
+   <div class="container2">
+       <div class="hero2-logo">
+           <h1>Let's create something special together, aprat, you.... and your love.</h1>
+       </div> 
+</section>
+
+<!-- whoami2 -->
+
+<section class="whoami2">
+   <div class="container">
+       <div class="row">
+           <div class="leftbox2">
+               <img src="../main/whoami01.webp" alt="whoami01" class="whoami01">
+           </div>
+           <div class="rightbox2">
+               <img src="../main/d01.png" alt="dmark" class="dmark">
+               <div class="pack">
+                   <p>
+                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>
+                       eiusmod tempor incididunt ut labore et dolore magna aliqua. <br>
+                       Faucibus pulvinar elementum integer enim neque volutpat ac. <br>
+                       Lorem dolor sed viverra ipsum nunc aliquet bibendum. Sed <br>
+                       tempus urna et pharetra pharetra massa massa ultricies. Integer <br>
+                       malesuada nunc vel risus commodo viverra maecenas <br>
+                       accumsan. Eget est lorem ipsum dolor sit. Nunc mi ipsum <br>
+                       faucibus vitae aliquet.
+                   </p>
+                   <p class="right aurore">
+                       Eve + Jack
+                   </p>
+               </div>
+           </div>
+       </div>
+   </div>
+   <a href="#" class="btn btn2 unna">
+       see more opinons
+   </a>
+   </section>
 <p>화이팅!</p>
 </body>
 </html>
