--- a/index.html
+++ b/index.html
@@ -75,6 +75,84 @@
     see more history
 </a>
 
+<section class="packages">
+   <div class="container text-center clearfix">
+       <div class="f1box"></div>
+       <h2 class="unna subtitle">Wedding photography packages</h2>
+   </div>
+   <div class="container">
+       <div class="row">
+           <div class="col">
+               <div class="package-box">
+                   <div class="inner">
+                       <img src="images/wedin3.jpg" alt="01">
+                   </div>
+               </div>
+               <h1 class="text-center unna">
+                   Wedding reportage
+               </h1>
+               <p class="text-center">
+                   Sed do eiusmod tempor incididunt ut<br>
+                   labore et dolore magna aliqua.<br>
+                   At volutpat diam ut venenatis tellus in.<br>
+                   Volutpat diam ut venenatis tellus in.<br>
+                   Scelerisque fermentum dui faucibus in ornare<br>
+                   quam viverra orci. Interdum<br>
+                   velit laoreet id donec ultrices.
+               </p>
+               <p class="text-center aurore">
+                   4000$
+               </p>
+           </div>
+           <div class="col">
+               <div class="package-box">
+                   <div class="inner">
+                       <img src="images/wedin4.jpg" alt="02">
+                   </div>
+               </div>
+               <h1 class="text-center unna">
+                   Honeymoon session
+               </h1>
+               <p class="text-center">
+                   Sed do eiusmod tempor incididunt ut<br>
+                   labore et dolore magna aliqua.<br>
+                   At volutpat diam ut venenatis tellus in.<br>
+                   Volutpat diam ut venenatis tellus in.<br>
+                   Scelerisque fermentum dui faucibus in ornare<br>
+                   quam viverra orci. Interdum<br>
+                   velit laoreet id donec ultrices.
+               </p>
+               <p class="text-center aurore">
+                   1500$
+               </p>
+           </div>
+           <div class="col">
+               <div class="package-box">
+                   <div class="inner">
+                       <img src="images/wedin.jpg" alt="03">
+                   </div>
+               </div>
+               <h1 class="text-center unna">
+                   Engagement session
+               </h1>
+               <p class="text-center">
+                   Sed do eiusmod tempor incididunt ut<br>
+                   labore et dolore magna aliqua.<br>
+                   At volutpat diam ut venenatis tellus in.<br>
+                   Volutpat diam ut venenatis tellus in.<br>
+                   Scelerisque fermentum dui faucibus in ornare<br>
+                   quam viverra orci. Interdum<br>
+                   velit laoreet id donec ultrices.
+               </p>
+               <p class="text-center aurore">
+                   500$
+               </p>
+           </div>
+       </div>
+       <a href="#" class="btn unna">Find out more about abailable packages</a>
+   </div>
+</section>
+
 <!-- container2 -->
 
 <section class="main2">
