--- a/index.html
+++ b/index.html
@@ -195,5 +195,32 @@
    </a>
    </section>
 <p>화이팅!</p>
+
+<footer>
+
+    <div class="container">
+      <h1 class="aurore">Andrew smith</h1>
+      <p>wedding photography</p>
+    </div>
+  
+    <div class="container">
+      <img src="images/facebookicon.png" class="facebookicon">
+      <img src="images/instagramicon.png" class="instagramicon">
+    </div>
+  
+    <div class="container">
+      <a href="#">dbtjd607@hanmil.net</a>
+      <p>+48 505 606 707</p>
+    </div>
+  
+    <nav class="container">
+      <a href="#">history</a>
+      <a href="#">offer</a>
+      <a href="#">opinions</a>
+      <a href="#">about me</a>
+      <a href="#">contact</a>
+   </nav>
+  
+  </footer>
 </body>
 </html>
