--- a/index.html
+++ b/index.html
@@ -75,6 +75,34 @@
     see more history
 </a>
 
+
+<!--  container1  -->
+
+<section class="whoami">
+   <div class="container1">
+       <div class="row">
+           <div class="leftbox">
+               <img src="images/photographer_1.webp" alt="aboutme" class="aboutme">
+               <img src="images/photographer_2.webp" alt="aboutme2" class="aboutme2">
+           </div>
+           <div class="rightbox">
+               <h1 class="unna">
+                   Hi I m Andrew<br/>
+                   and I'm a wedding photographer
+               </h1>
+               <p>제1항의 해임건의는 국회재적의원 3분의 1 이상의 발의에 의하여 국회재적의원 과반수의 찬성이 있어야 한다. 국회의원은 국회에서 직무상 행한 발언과 표결에 관하여 국회외에서 책임을 지지 아니한다. 형사피해자는 법률이 정하는 바에 의하여 당해 사건의 재판절차에서 진술할 수 있다. 모든 국민은 행위시의 법률에 의하여 범죄를 구성하지 아니하는 행위로 소추되지 아니하며,</p>
+               <p>사회적 특수계급의 제도는 인정되지 아니하며, 어떠한 형태로도 이를 창설할 수 없다. 탄핵소추의 의결을 받은 자는 탄핵심판이 있을 때까지 그 권한행사가 정지된다. 국가는 사회보장·사회복지의 증진에 노력할 의무를 진다. 이 헌법시행 당시의 법령과 조약은 이 헌법에 위배되지 아니하는 한 그 효력을 지속한다. 대한민국은 민주공화국이다. 국무위원은 국정에 관하여 대통령을 보좌하며, 국무회의의 구성원으로서 국정을 심의한다. 대법원은 법률에 저촉되지 아니하는 범위안에서 소송에 관한 절차, 법원의 내부규율과</p>
+               <a href="#" class="btn unna">
+                   More about me
+               </a>
+           </div>
+       </div>
+   </div>
+</section>
+
+
+
+
 <!-- container2 -->
 
 <section class="main2">
