--- a/index.html
+++ b/index.html
@@ -75,84 +75,6 @@
     see more history
 </a>
 
-<section class="packages">
-   <div class="container text-center clearfix">
-       <div class="f1box"></div>
-       <h2 class="unna subtitle">Wedding photography packages</h2>
-   </div>
-   <div class="container">
-       <div class="row">
-           <div class="col">
-               <div class="package-box">
-                   <div class="inner">
-                       <img src="images/wedin3.jpg" alt="01">
-                   </div>
-               </div>
-               <h1 class="text-center unna">
-                   Wedding reportage
-               </h1>
-               <p class="text-center">
-                   Sed do eiusmod tempor incididunt ut<br>
-                   labore et dolore magna aliqua.<br>
-                   At volutpat diam ut venenatis tellus in.<br>
-                   Volutpat diam ut venenatis tellus in.<br>
-                   Scelerisque fermentum dui faucibus in ornare<br>
-                   quam viverra orci. Interdum<br>
-                   velit laoreet id donec ultrices.
-               </p>
-               <p class="text-center aurore">
-                   4000$
-               </p>
-           </div>
-           <div class="col">
-               <div class="package-box">
-                   <div class="inner">
-                       <img src="images/wedin4.jpg" alt="02">
-                   </div>
-               </div>
-               <h1 class="text-center unna">
-                   Honeymoon session
-               </h1>
-               <p class="text-center">
-                   Sed do eiusmod tempor incididunt ut<br>
-                   labore et dolore magna aliqua.<br>
-                   At volutpat diam ut venenatis tellus in.<br>
-                   Volutpat diam ut venenatis tellus in.<br>
-                   Scelerisque fermentum dui faucibus in ornare<br>
-                   quam viverra orci. Interdum<br>
-                   velit laoreet id donec ultrices.
-               </p>
-               <p class="text-center aurore">
-                   1500$
-               </p>
-           </div>
-           <div class="col">
-               <div class="package-box">
-                   <div class="inner">
-                       <img src="images/wedin.jpg" alt="03">
-                   </div>
-               </div>
-               <h1 class="text-center unna">
-                   Engagement session
-               </h1>
-               <p class="text-center">
-                   Sed do eiusmod tempor incididunt ut<br>
-                   labore et dolore magna aliqua.<br>
-                   At volutpat diam ut venenatis tellus in.<br>
-                   Volutpat diam ut venenatis tellus in.<br>
-                   Scelerisque fermentum dui faucibus in ornare<br>
-                   quam viverra orci. Interdum<br>
-                   velit laoreet id donec ultrices.
-               </p>
-               <p class="text-center aurore">
-                   500$
-               </p>
-           </div>
-       </div>
-       <a href="#" class="btn unna">Find out more about abailable packages</a>
-   </div>
-</section>
-
 <!-- container2 -->
 
 <section class="main2">
@@ -168,10 +90,10 @@
    <div class="container">
        <div class="row">
            <div class="leftbox2">
-               <img src="../main/whoami01.webp" alt="whoami01" class="whoami01">
+               <img src="./images/wedding07.jpg" alt="whoami01" class="whoami01">
            </div>
            <div class="rightbox2">
-               <img src="../main/d01.png" alt="dmark" class="dmark">
+               <img src="./images/flow.png" alt="dmark" class="dmark">
                <div class="pack">
                    <p>
                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>
@@ -195,32 +117,5 @@
    </a>
    </section>
 <p>화이팅!</p>
-
-<footer>
-
-    <div class="container">
-      <h1 class="aurore">Andrew smith</h1>
-      <p>wedding photography</p>
-    </div>
-  
-    <div class="container">
-      <img src="images/facebookicon.png" class="facebookicon">
-      <img src="images/instagramicon.png" class="instagramicon">
-    </div>
-  
-    <div class="container">
-      <a href="#">dbtjd607@hanmil.net</a>
-      <p>+48 505 606 707</p>
-    </div>
-  
-    <nav class="container">
-      <a href="#">history</a>
-      <a href="#">offer</a>
-      <a href="#">opinions</a>
-      <a href="#">about me</a>
-      <a href="#">contact</a>
-   </nav>
-  
-  </footer>
 </body>
 </html>
